--- a/playground/index.html
+++ b/playground/index.html
@@ -204,6 +204,7 @@
 
         <a href="javascript:populate('example-lamb'      );">&nbsp;&nbsp;&nbsp;&nbsp; lambda calculus</a>
         <a href="javascript:populate('example-seq'       );">&nbsp;&nbsp;&nbsp;&nbsp; sequent calculus</a>
+        <a href="javascript:populate('example-constr'    );">&nbsp;&nbsp;&nbsp;&nbsp; constructive proving</a>
 
 <br/>
         </nobr></b>
