--- a/playground/index.html
+++ b/playground/index.html
@@ -217,8 +217,8 @@
 
 <div class="droplbl">4. theorem proving examples</div>
 
-        <a href="javascript:populate('example-constr'    );">&nbsp;&nbsp;&nbsp;&nbsp; constructive proving assistant</a>
-        <a href="javascript:populate('example-seq'       );">&nbsp;&nbsp;&nbsp;&nbsp; sequent calculus automated prover</a>
+        <a href="javascript:populate('example-constr'    );">&nbsp;&nbsp;&nbsp;&nbsp; propositional logic manual prover</a>
+        <a href="javascript:populate('example-seq'       );">&nbsp;&nbsp;&nbsp;&nbsp; sequent calculus formula validator</a>
 
 <br/>
 
