--- a/playground/index.html
+++ b/playground/index.html
@@ -213,7 +213,15 @@
         <a href="javascript:populate('example-bool2');">&nbsp;&nbsp;&nbsp;&nbsp; Boolean logic to SKI compiler</a>
         <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp; Lambda calculus to SKI compiler</a>
         <a href="javascript:populate('example-jot');  ">&nbsp;&nbsp;&nbsp;&nbsp; Jot framework to SKI compiler</a>
+
 <br/>
+
+<!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.3. sequent computing model</div>
+
+        <a href="javascript:populate('example-seq'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; sequent model interpreter</a>
+        <a href="javascript:populate('example-pl');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; propositional logic to sequent model compiler</a>
+
+<br/-->
 
 <!--div class="droplbl">4. theorem proving examples</div>
 
