--- a/playground/index.html
+++ b/playground/index.html
@@ -81,7 +81,13 @@
       font-size: 0.8em;
       height: calc(100vh - 144px);
     }
-
+    /*
+    br {
+        display: block;
+        content: "";
+        margin-top: 10px;
+    }
+    */
     .dropdown-content a {
       text-align: left;
       color: rgb(48,48,48);
@@ -96,7 +102,7 @@
     .dropdown-content div {
       text-align: left;
       color: rgb(48,48,48);
-      padding: 2px 2px;
+      padding: 4px 2px;
       padding-right: 10px;
       text-decoration: none;
       display: block;
@@ -216,19 +222,12 @@
 
 <br/>
 
-<!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.3. sequent computing model</div>
+<div class="droplbl">4. theorem proving examples</div>
 
-        <a href="javascript:populate('example-seq'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; sequent model interpreter</a>
-        <a href="javascript:populate('example-pl');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; propositional logic to sequent model compiler</a>
+        <a href="javascript:populate('example-prfver'    );">&nbsp;&nbsp;&nbsp;&nbsp; propositional logic proof verifier</a>
+        <!--a href="javascript:populate('example-prffnd'    );">&nbsp;&nbsp;&nbsp;&nbsp; propositional logic proof finder</a-->
 
-<br/-->
-
-<!--div class="droplbl">4. theorem proving examples</div>
-
-        <a href="javascript:populate('example-constr'    );">&nbsp;&nbsp;&nbsp;&nbsp; propositional logic manual prover</a>
-        <a href="javascript:populate('example-seq'       );">&nbsp;&nbsp;&nbsp;&nbsp; sequent calculus formula validator</a>
-
-<br/-->
+<br>
 
         </nobr></b>
     </div>
