--- a/playground/index.html
+++ b/playground/index.html
@@ -154,28 +154,28 @@
 
 <div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 1.1. single rule</div>
 
-        <a href="javascript:populate('example1-1');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; hello machine</a>
-        <a href="javascript:populate('example1-2');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; greet entity</a>
+        <a href="javascript:populate('example1-1');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - hello machine</a>
+        <a href="javascript:populate('example1-2');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - greet entity</a>
 
 <br/>
 
 <div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 1.2. set of rules</div>
-        <a href="javascript:populate('example1-3');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; toy making decision</a>
-        <a href="javascript:populate('example1-4');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; job title decision</a>
+        <a href="javascript:populate('example1-3');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - toy making decision</a>
+        <a href="javascript:populate('example1-4');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - job title decision</a>
 
 <br/>
 
 <div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 1.3. chaining rules</div>
 
-        <a href="javascript:populate('example1-5');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; shadows decision</a>
-        <a href="javascript:populate('example1-6');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; weighting decision</a>
+        <a href="javascript:populate('example1-5');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - shadows decision</a>
+        <a href="javascript:populate('example1-6');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - weighting decision</a>
 
 <br/>
 
 <div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 1.4. scoped rules</div>
 
-        <a href="javascript:populate('example1-8');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; planting cyclus</a>
-        <a href="javascript:populate('example1-9');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; fun meeting</a>
+        <a href="javascript:populate('example1-8');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - planting cyclus</a>
+        <a href="javascript:populate('example1-9');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - fun meeting</a>
 
 <br/>
 
@@ -197,37 +197,38 @@
 
 <div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.1. booleans and numbers</div>
 
-        <a href="javascript:populate('example-branch');    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; branching choice</a>
-        <a href="javascript:populate('example-bool');      ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Boolean evaluator</a>
-        <a href="javascript:populate('example-binadd');    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; binary number addition</a>
-        <a href="javascript:populate('example-bincompare');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; binary number comparison</a>
+        <a href="javascript:populate('example-branch');    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - branching choice</a>
+        <a href="javascript:populate('example-bool');      ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Boolean evaluator</a>
+        <a href="javascript:populate('example-binadd');    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - binary number addition</a>
+        <a href="javascript:populate('example-bincompare');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - binary number comparison</a>
 
 <br/>
 
 <div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.2. operations on lists</div>
 
-        <a href="javascript:populate('example-append'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; append list</a>
-        <a href="javascript:populate('example-reverse');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; reverse list</a>
-        <a href="javascript:populate('example-replace');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; replace element</a>
-        <a href="javascript:populate('example-remove'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; remove element</a>
+        <a href="javascript:populate('example-append'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - append list</a>
+        <a href="javascript:populate('example-reverse');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - reverse list</a>
+        <a href="javascript:populate('example-replace');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - replace element</a>
+        <a href="javascript:populate('example-remove'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - remove element</a>
 
 <br/>
 
 <div class="droplbl">3. computing platforms examples</div>
 
-        <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp; SKI calculus interpreter</a>
-        <a href="javascript:populate('example-bool2');">&nbsp;&nbsp;&nbsp;&nbsp; Boolean logic to SKI compiler</a>
-        <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp; Lambda calculus to SKI compiler</a>
-        <a href="javascript:populate('example-jot');  ">&nbsp;&nbsp;&nbsp;&nbsp; Jot framework to SKI compiler</a>
+        <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
+        <!--a href="javascript:populate('example-bool2');">&nbsp;&nbsp;&nbsp;&nbsp; - Boolean logic to SKI compiler</a-->
+        <a href="javascript:populate('example-jot');  ">&nbsp;&nbsp;&nbsp;&nbsp; - Jot framework to SKI compiler</a>
+        <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp; - Lambda calculus to SKI compiler</a>
+        <a href="javascript:populate('example-proof');">&nbsp;&nbsp;&nbsp;&nbsp; - logic proof to SKI compiler</a>
 
 <br/>
 
-<div class="droplbl">4. theorem proving examples</div>
+<!--div class="droplbl">4. theorem proving examples</div>
 
-        <a href="javascript:populate('example-prfver'    );">&nbsp;&nbsp;&nbsp;&nbsp; propositional logic proof verifier</a>
-        <!--a href="javascript:populate('example-prffnd'    );">&nbsp;&nbsp;&nbsp;&nbsp; propositional logic proof finder</a-->
+        <a href="javascript:populate('example-prfver'    );">&nbsp;&nbsp;&nbsp;&nbsp; - propositional logic proof verifier</a>
+        <a href="javascript:populate('example-prffnd'    );">&nbsp;&nbsp;&nbsp;&nbsp; - propositional logic proof finder</a>
 
-<br>
+<br-->
 
         </nobr></b>
     </div>
