--- a/playground/index.html
+++ b/playground/index.html
@@ -217,16 +217,16 @@
 
         <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
         <!--a href="javascript:populate('example-bool2');">&nbsp;&nbsp;&nbsp;&nbsp; - Boolean logic to SKI compiler</a-->
-        <a href="javascript:populate('example-jot');  ">&nbsp;&nbsp;&nbsp;&nbsp; - Jot framework to SKI compiler</a>
+        <!--a href="javascript:populate('example-jot');  ">&nbsp;&nbsp;&nbsp;&nbsp; - Jot framework to SKI compiler</a-->
         <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp; - Lambda calculus to SKI compiler</a>
-        <a href="javascript:populate('example-proof');">&nbsp;&nbsp;&nbsp;&nbsp; - logic proof to SKI compiler</a>
+        <!--a href="javascript:populate('example-proof');">&nbsp;&nbsp;&nbsp;&nbsp; - logic proof to SKI compiler</a-->
 
 <br/>
 
-<!--div class="droplbl">4. theorem proving examples</div>
+<div class="droplbl">4. theorem proving examples</div>
 
-        <a href="javascript:populate('example-prfver'    );">&nbsp;&nbsp;&nbsp;&nbsp; - propositional logic proof verifier</a>
-        <a href="javascript:populate('example-prffnd'    );">&nbsp;&nbsp;&nbsp;&nbsp; - propositional logic proof finder</a>
+        <a href="javascript:populate('example-proof'    );">&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof verifier</a>
+        <!--a href="javascript:populate('example-prffnd'    );">&nbsp;&nbsp;&nbsp;&nbsp; - propositional logic proof finder</a-->
 
 <br-->
 
