--- a/playground/index.html
+++ b/playground/index.html
@@ -179,10 +179,9 @@
 
 <br/>
 
-<!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 1.5. unbound variables</div>
+<!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 1.5. normalizing rules</div>
 
-        <a href="javascript:populate('example-uvar1');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; or introduction</a>
-        <a href="javascript:populate('example-uvar2');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; reverse equality test</a>
+        <a href="javascript:populate('example1-10');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - lists and atoms</a>
 
 <br/-->
 
@@ -206,15 +205,23 @@
 
 <div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.2. operations on lists</div>
 
-        <a href="javascript:populate('example-append'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - append list</a>
-        <a href="javascript:populate('example-reverse');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - reverse list</a>
+        <a href="javascript:populate('example-append'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - append element</a>
         <a href="javascript:populate('example-replace');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - replace element</a>
         <a href="javascript:populate('example-remove'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - remove element</a>
+        <a href="javascript:populate('example-reverse');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - reverse list</a>
 
 <br/>
 
 <div class="droplbl">3. computing platforms examples</div>
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. functional programming</div>
+
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. imperative programming</div>
+
+        <a href="javascript:populate('example-fsm'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - FSM control flow interpreter</a>
+        <a href="javascript:populate('example-pl0'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - imperative subset to FSM compiler</a>
+
+<br>
+
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.2. functional programming</div>
 
         <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
         <!--a href="javascript:populate('example-bool2');">&nbsp;&nbsp;&nbsp;&nbsp; - Boolean logic to SKI compiler</a-->
@@ -224,12 +231,12 @@
 
 <br/>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.2. logic programming</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.3. logic programming</div>
 
         <a href="javascript:populate('example-proof'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof verifier</a>
         <!--a href="javascript:populate('example-prffnd'    );">&nbsp;&nbsp;&nbsp;&nbsp; - propositional logic proof finder</a-->
 
-<br-->
+<br>
 
         </nobr></b>
     </div>
@@ -469,6 +476,9 @@
             output1.selectionStart = 0;
             output1.selectionEnd = 0;
         }, 0);
+        
+        //var rules = await Rewriter.compileFile ("../examples/fetch.sv");
+        //var output = Rewriter.rewrite (rules, "(process (lmbd x x))");
     }
 </script>
 
