--- a/playground/index.html
+++ b/playground/index.html
@@ -214,14 +214,14 @@
 
 <div class="droplbl">3. computing platforms examples</div>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. imperative programming</div>
+<!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. imperative programming</div>
 
         <a href="javascript:populate('example-fsm'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - FSM control flow interpreter</a>
         <a href="javascript:populate('example-pl0'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - imperative subset to FSM compiler</a>
 
-<br>
+<br-->
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.2. functional programming</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. functional programming</div>
 
         <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
         <!--a href="javascript:populate('example-bool2');">&nbsp;&nbsp;&nbsp;&nbsp; - Boolean logic to SKI compiler</a-->
@@ -231,7 +231,7 @@
 
 <br/>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.3. logic programming</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.2. logic programming</div>
 
         <a href="javascript:populate('example-proof'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof verifier</a>
         <!--a href="javascript:populate('example-prffnd'    );">&nbsp;&nbsp;&nbsp;&nbsp; - propositional logic proof finder</a-->
