--- a/playground/index.html
+++ b/playground/index.html
@@ -146,11 +146,7 @@
     <div id="drpdwncntnt" class="dropdown-content" style="margin-top: 8px;">
         <b><nobr>
         
-<!--red>❎</red><grn>✅</grn><blu>🟩</blu-->
-
-<!--a href="javascript:populate('example-test1');">test 1</a-->
-
-<div class="droplbl">1. world modeling examples</div>
+<div class="droplbl">1. tutorial examples</div>
 
 <div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 1.1. single rule</div>
 
@@ -179,62 +175,43 @@
 
 <br/>
 
-<!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 1.5. normalizing rules</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 1.5. built-in functions</div>
 
-        <a href="javascript:populate('example1-10');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - lists and atoms</a>
+        <a href="javascript:populate('example1-10');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - atoms and lists</a>
 
-<br/-->
-
-<!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 1.5. nondeterminism</div>
-
-        <a href="javascript:populate('example-seq1');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; academic citizen</a>
-        <a href="javascript:populate('example-seq2');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; computer expert</a>
-
-<br-->
+<br>
 
 <div class="droplbl">2. programming examples</div>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.1. Booleans and numbers</div>
-
-        <a href="javascript:populate('example-branch');    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - branching choice</a>
-        <a href="javascript:populate('example-bool');      ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Boolean evaluator</a>
-        <a href="javascript:populate('example-binadd');    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - binary number addition</a>
-        <a href="javascript:populate('example-bincompare');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - binary number comparison</a>
+        <a href="javascript:populate('example-branch');    ">&nbsp;&nbsp;&nbsp;&nbsp; - branching choice</a>
+        <a href="javascript:populate('example-binarith'  );">&nbsp;&nbsp;&nbsp;&nbsp; - natural numbers</a>
 
 <br/>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.2. operations on lists</div>
-
-        <a href="javascript:populate('example-append'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - append element</a>
-        <a href="javascript:populate('example-replace');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - replace element</a>
-        <a href="javascript:populate('example-remove'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - remove element</a>
-        <a href="javascript:populate('example-reverse');">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - reverse list</a>
-
-<br/>
-
-<div class="droplbl">3. computing platforms examples</div>
+<div class="droplbl">3. functional programming</div>
 
 <!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. imperative programming</div>
 
         <a href="javascript:populate('example-fsm'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - FSM control flow interpreter</a>
-        <a href="javascript:populate('example-pl0'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - imperative subset to FSM compiler</a>
+        <a href="javascript:populate('example-imp'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - IMP to FSM compiler</a>
 
 <br-->
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. functional programming</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. combinatory logic</div>
 
         <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
-        <!--a href="javascript:populate('example-bool2');">&nbsp;&nbsp;&nbsp;&nbsp; - Boolean logic to SKI compiler</a-->
-        <!--a href="javascript:populate('example-jot');  ">&nbsp;&nbsp;&nbsp;&nbsp; - Jot framework to SKI compiler</a-->
-        <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Lambda calculus to SKI compiler</a>
-        <!--a href="javascript:populate('example-proof');">&nbsp;&nbsp;&nbsp;&nbsp; - logic proof to SKI compiler</a-->
 
 <br/>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.2. logic programming</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.2. untyped lambda calculus</div>
 
-        <a href="javascript:populate('example-proof'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof verifier</a>
-        <!--a href="javascript:populate('example-prffnd'    );">&nbsp;&nbsp;&nbsp;&nbsp; - propositional logic proof finder</a-->
+        <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - LC to SKI compiler</a>
+
+<br/>
+
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.3. type algebra</div>
+
+        <a href="javascript:populate('example-proof'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof checker</a>
 
 <br>
 
@@ -451,6 +428,7 @@
     async function process () {
         output1.value = "";
         document.getElementById("tm").innerHTML = "(compiling rules...)";
+        
         setTimeout (async function (){
             var tm = Date.now ();
             var rules = await Rewriter.compile (rules1.getValue ());
