--- a/playground/index.html
+++ b/playground/index.html
@@ -418,7 +418,9 @@
         }, 0);
     }
 
-    populate ('example1-1');
+    window.onload = () => {
+        populate ('example1-1');
+    }
     //populate ('example-test');
 </script>
 
