--- a/playground/index.html
+++ b/playground/index.html
@@ -135,7 +135,7 @@
 <tbody>
 <tr>
 <td class="exRound" id="top" cellpadding="10" align="center" valign="middle" height="30">
-<font style="font-size:24px"><strong>Symbolverse playground (WIP)</strong></font>
+<font style="font-size:24px"><strong>Symbolverse Playground</strong></font>
 </td>
 </tr>
 <tr>
@@ -329,6 +329,15 @@
         <td align="left">
         </td>
         <td align="right">
+            <font style="font-size:24px">
+                <b class="button">
+                <a id="bck2" href="https://tearflake.github.io/symbolverse/docs/symbolverse" target="new" style="text-decoration: none; 20px; margin-right: 10px;">
+                <span style="padding-left: 20px; padding-right: 20px;">
+                read the specification
+                </span>
+                </a>
+                </b>
+            </font>
             <font style="font-size:24px">
                 <b class="button">
                 <a id="bck2" href="https://github.com/tearflake/symbolverse" target="new" style="text-decoration: none;">
