--- a/playground/index.html
+++ b/playground/index.html
@@ -197,23 +197,23 @@
 
 <br-->
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. combinatory logic</div>
-
-        <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
-
-<br/>
-
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.2. untyped lambda calculus</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. lambda calculus</div>
 
         <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - LC to SKI compiler</a>
 
 <br/>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.3. type algebra</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.2. type inference</div>
 
         <a href="javascript:populate('example-proof'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof checker</a>
 
 <br>
+
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.3. program evaluator</div>
+
+        <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
+
+<br/>
 
         </nobr></b>
     </div>
