--- a/playground/index.html
+++ b/playground/index.html
@@ -181,14 +181,14 @@
 
 <br>
 
-<div class="droplbl">2. programming examples</div>
+<!--div class="droplbl">2. programming examples</div>
 
         <a href="javascript:populate('example-branch');    ">&nbsp;&nbsp;&nbsp;&nbsp; - branching choice</a>
         <a href="javascript:populate('example-binarith'  );">&nbsp;&nbsp;&nbsp;&nbsp; - natural numbers</a>
 
-<br/>
+<br/-->
 
-<div class="droplbl">3. functional programming</div>
+<div class="droplbl">2. functional programming</div>
 
 <!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. imperative programming</div>
 
@@ -197,19 +197,19 @@
 
 <br-->
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. lambda calculus</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.1. lambda calculus</div>
 
         <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - LC to SKI compiler</a>
 
 <br/>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.2. type inference</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.2. type inference</div>
 
         <a href="javascript:populate('example-proof'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof checker</a>
 
 <br>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.3. program evaluator</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.3. program evaluator</div>
 
         <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
 
