--- a/playground/index.html
+++ b/playground/index.html
@@ -188,7 +188,21 @@
 
 <br/-->
 
-<div class="droplbl">2. functional programming</div>
+<div class="droplbl">2. parser generator</div>
+
+        <a href="javascript:populate('example-cfg'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - CFG parser generator</a>
+
+<br/>
+
+<div class="droplbl">3. computing platforms</div>
+
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;3.1. imperative programming</div>
+
+        <a href="javascript:populate('example-imp'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - IMP interpreter</a>
+
+<br/>
+
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;3.2. functional programming</div>
 
 <!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. imperative programming</div>
 
@@ -197,24 +211,36 @@
 
 <br-->
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.1. lambda calculus</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.2.1. lambda calculus</div>
 
-        <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - LC to SKI compiler</a>
+        <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - LC to SKI compiler</a>
 
 <br/>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.2. type inference</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.2.2. type inference</div>
 
-        <a href="javascript:populate('example-proof'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof checker</a>
+        <a href="javascript:populate('example-proof'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof checker</a>
 
 <br>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 2.3. program evaluator</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.2.3. program evaluator</div>
 
-        <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
+        <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
 
 <br/>
 
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.2.4. putting it all together</div>
+
+        <a href="javascript:populate('example-stlc');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - STLC implementation</a>
+
+<br/>
+
+
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;2.4. logic programming</div>
+
+        <a href="javascript:populate('example-log'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof finder</a>
+
+<br/>
         </nobr></b>
     </div>
 </td>
