--- a/playground/index.html
+++ b/playground/index.html
@@ -188,21 +188,15 @@
 
 <br/-->
 
-<div class="droplbl">2. parser generator</div>
+<div class="droplbl">2. computing platforms</div>
 
-        <a href="javascript:populate('example-cfg'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - CFG parser generator</a>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;2.1. imperative programming</div>
 
-<br/>
-
-<div class="droplbl">3. computing platforms</div>
-
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;3.1. imperative programming</div>
-
-        <a href="javascript:populate('example-imp'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - IMP interpreter</a>
+        <a href="javascript:populate('example-imp'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - IMP interpreter (WIP)</a>
 
 <br/>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;3.2. functional programming</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;2.2. functional programming</div>
 
 <!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp; 3.1. imperative programming</div>
 
@@ -211,34 +205,34 @@
 
 <br-->
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.2.1. lambda calculus</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2.2.1. lambda calculus</div>
 
         <a href="javascript:populate('example-lamb'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - LC to SKI compiler</a>
 
 <br/>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.2.2. type inference</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2.2.2. type inference</div>
 
         <a href="javascript:populate('example-proof'    );">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof checker</a>
 
 <br>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.2.3. program evaluator</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2.2.3. program evaluator</div>
 
         <a href="javascript:populate('example-ski');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - SKI calculus interpreter</a>
 
 <br/>
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.2.4. putting it all together</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2.2.4. putting it all together</div>
 
         <a href="javascript:populate('example-stlc');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - STLC implementation</a>
 
 <br/>
 
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;2.4. logic programming</div>
+<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;2.3. logic programming</div>
 
-        <a href="javascript:populate('example-log'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof finder</a>
+        <a href="javascript:populate('example-log'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert-style proof finder (WIP)</a>
 
 <br/>
         </nobr></b>
