--- a/playground/index.html
+++ b/playground/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>Symbolverse playground</title>
+<link rel="icon" type="image/png" href="./icon-192.png"/>
 
 <link rel="icon" type="image/png" href="">
 <script src="edit.js"></script>
@@ -194,7 +195,8 @@
 
         <a href="javascript:populate('example-boolarith');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - truth values: Boolean algebra</a>
         <a href="javascript:populate('example-peanoarith'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - integers: Peano arithmetic</a>
-        <a href="javascript:populate('example-imp');        ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - IMP interpreter</a>
+        <a href="javascript:populate('example-numarith'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - integers: natural numbers</a>
+        <a href="javascript:populate('example-imp');        ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - simplistic platform: IMP interpreter</a>
 
 <br/>
 
@@ -215,11 +217,12 @@
 <br/>
 
 
-<div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;2.3. logic programming</div>
+<!--div class="droplbl">&nbsp;&nbsp;&nbsp;&nbsp;2.3. logic programming</div-->
 
-        <a href="javascript:populate('example-log'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert program: SKI expressions enumerator</a>
+        <!--a href="javascript:populate('example-log'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Hilbert program: SKI expressions enumerator</a-->
+        <!--a href="javascript:populate('example-datalog'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Datalog implementation</a>
 
-<br/>
+<br/-->
         </nobr></b>
     </div>
 </td>
