--- a/playground/index.html
+++ b/playground/index.html
@@ -195,7 +195,7 @@
 
         <a href="javascript:populate('example-boolarith');  ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - truth values: Boolean algebra</a>
         <a href="javascript:populate('example-peanoarith'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - integers: Peano arithmetic</a>
-        <a href="javascript:populate('example-numarith'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - integers: natural numbers</a>
+        <!--a href="javascript:populate('example-numarith'); ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - integers: natural numbers</a-->
         <a href="javascript:populate('example-imp');        ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - simplistic platform: IMP interpreter</a>
 
 <br/>
